# catasto-api

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: docker-image.yml
app/: main.py
app/config/: auth.py  client.py  config.py  database.py  logging.py
app/models/: general.py  immobile.py  personafisica.py  personagiuridica.py  visura.py
app/routers/: catastodata.py  catastoprints.py  geoloader.py  vistecustom.py
app/schemas/: config.py  general.py  geoloader.py  immobile.py  personafisica.py  personagiuridica.py  visura.py
app/services/: csvformatter.py  geoloader.py  immobileservice.py  main.py  pdfformatter.py  personafisicaservice.py  personagiuridicaservice.py  visuraservice.py
app/templates/: footer.html  header.html  immobile_list_template.html  personafisica_list_template.html  personagiuridica_list_template.html  visura_template.html
app/utils/: app_exceptions.py  geo.py  parser.py  request.py  service_result.py  utils.py
