[tool.poetry]
name = "catasto-api"
version = "0.1.0"
description = "Printing stuff"
authors = ["Antonio Cerciello <antonio.cerciello@geobeyond.it>"]

[tool.poetry.dependencies]
python = "^3.8"
fief-client = {extras = ["fastapi"], version = "^0.14.1"}
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"
httpx-oauth = "^0.10.1"
fastapi-oidc = "^0.0.9"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"
prefect = "^2.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
