[tool.poetry]
name = "catasto-api"
version = "0.1.0"
description = "Printing stuff"
authors = ["Antonio Cerciello <antonio.cerciello@geobeyond.it>"]

[tool.poetry.dependencies]
python = "^3.9"
aiofiles = "^22.1.0"
python-multipart = "^0.0.5"
httpx-oauth = "^0.10.1"
fastapi-oidc = "^0.0.9"
uvicorn = "^0.18.3"
pydantic = {extras = ["dotenv"], version = "^1.10.12"}
pdfkit = "^1.0.0"
databases = {extras = ["asyncpg"], version = "^0.6.1"}
SQLAlchemy = "^1.4.41"
psycopg2-binary = "^2.9.3"
Jinja2 = "^3.1.2"
fastapi-third-party-auth = "^0.1.2"
pandas = "^1.5.1"
fastapi = "^0.103.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
ipython = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
